--- a/examples/breadcrumb/index.html
+++ b/examples/breadcrumb/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>ARIA Breadcrumb Design Pattern Example</title>
-    <link href="../css/core.css" rel="stylesheet">
-    <link href="../css/table.css" rel="stylesheet">
+    <link href="css/core.css" rel="stylesheet">
+    <link href="css/table.css" rel="stylesheet">
     <link href="css/breadcrumb.css" rel="stylesheet">
   </head>
   <body>
@@ -12,6 +12,11 @@
       <h1>ARIA Breadcrumb Design Pattern Example</h1>
 
       <p>This example shows the <a href="../../aria-practices.html#breadcrumb">breadcrumb design pattern</a>.</p>
+
+	  <p>
+	    It is recommended authors use an ordered list to structure the list of links.
+	    Visual seperators should be added through <abbr title="Cascading Style Sheets">CSS</abbr>.
+	  </p>
 
       <div id="example">
 
@@ -63,7 +68,7 @@
         </tbody>
       </table>
 
-      <script src="../js/examples.js" type="text/javascript"></script>
+      <script src="js/examples.js" type="text/javascript"></script>
 
       <h2>Source Code</h2>
 
