--- a/examples/breadcrumb/index.html
+++ b/examples/breadcrumb/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>ARIA Breadcrumb Design Pattern Example</title>
-    <link href="css/core.css" rel="stylesheet">
-    <link href="css/table.css" rel="stylesheet">
+    <link href="../css/core.css" rel="stylesheet">
+    <link href="../css/table.css" rel="stylesheet">
     <link href="css/breadcrumb.css" rel="stylesheet">
   </head>
   <body>
@@ -68,7 +68,7 @@
         </tbody>
       </table>
 
-      <script src="js/examples.js" type="text/javascript"></script>
+      <script src="../js/examples.js" type="text/javascript"></script>
 
       <h2>Source Code</h2>
 
