Fix typos in grid design pattern section
modified:   aria-practices.html to fix the 3 typos described in comments by @annabbot in issue #29.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1645,7 +1645,7 @@
                     </ul>
                     <ul class="note">
                         <li>When the above grid navigation keys move focus, whether the focus
-                            is sett on an element inside the cell or the grid cell depends on cell
+                            is set on an element inside the cell or the grid cell depends on cell
                             content. See <a href="gridNav_focus">Whether to Focus on a Cell or an Element Inside It</a>.
                         </li>
                         <li>While navigation keys, such as arrow keys, are moving focus from
@@ -1670,7 +1670,7 @@
                             key can serve as a shortcut for checking the box when focus is not on
                             the checkbox.</li>
                         <li><kbd>Control + A</kbd>: Selects all cells.</li>
-                        <li><kbd>Shift + Rightt Arrow</kbd>: Extends selection one cell to the
+                        <li><kbd>Shift + Right Arrow</kbd>: Extends selection one cell to the
                             right.</li>
                         <li><kbd>Shift + Left Arrow</kbd>: Extends selection one cell to the
                             left.</li>
@@ -1766,7 +1766,7 @@
                             key can serve as a shortcut for checking the box when focus is not on
                             the checkbox.</li>
                         <li><kbd>Control + A</kbd>: Selects all cells.</li>
-                        <li><kbd>Shift + Rightt Arrow</kbd>: Extends selection one cell to the
+                        <li><kbd>Shift + Right Arrow</kbd>: Extends selection one cell to the
                             right.</li>
                         <li><kbd>Shift + Left Arrow</kbd>: Extends selection one cell to the
                             left.</li>
