Removed external example links from grid and menubutton
modified:   aria-practices.html:
In grid design pattern example subsection, removed warning note about external examples and removed 3 links to external examples.
In menubutton design pattern example subsection, removed warning note about external examples.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -907,23 +907,8 @@
             </section>
             <section class="notoc">
                 <h4>Examples</h4>
-                <p class="note">Any examples referenced here that are hosted outside www.w3.org
-                    may have changed and may not accurately exemplify the guidance in this section.
-                    The APG task force is developing examples for APG version 1.1 that will be
-                    directly incorporated into the guide.</p>
                 <ul>
                     <li><a href="examples/grid/dataGrids.html">Data Grids</a>: Three example implementations of the grid design pattern that include features relevant to tabular information, such as content editing, sort, and column hiding. </li>
-                    <li><a href="http://www.oaa-accessibility.org/examplep/grid1/" title="Grid Example: Reimbursement Form"
-                        target="_blank"
-                        rel="nofollow">Travel form (Open Ajax Alliance)</a></li>
-                    <li><a href="http://www.oaa-accessibility.org/examplep/grid2/"
-                        title="Grid: Email Application"
-                        target="_blank"
-                        rel="nofollow">Email client (Open Ajax Alliance)</a></li>
-                    <li><a href="http://www.oaa-accessibility.org/examplep/grid2/"
-                        title="Grid: Email Application"
-                        target="_blank"
-                        rel="nofollow">Grid Email Application sortable by column headers</a></li>
                 </ul>
             </section>
         </section>
@@ -1068,7 +1053,8 @@
       </section>
     </section>
 
-    <section class="widget" id="menu"><h3>Menu or Menu bar</h3>
+    <section class="widget" id="menu">
+    <h3>Menu or Menu bar</h3>
       <p>
         A <a href="#menu" class="role-reference">menu</a> is a widget that offers a list of choices to the user, such as a set of actions or functions.
         A menu is usually opened, or made visible, by activating a <a href="#menubutton">menu button</a>, choosing an item in a menu that opens a sub menu, or by invoking a command, such as <kbd>Shift + F10</kbd> in Windows, that opens a context specific menu.
@@ -1187,7 +1173,6 @@
 
       <section class="notoc">
         <h4>Example</h4>
-        <p class="note">Any examples referenced here that are hosted outside www.w3.org may have changed and may not accurately exemplify the guidance in this section. The APG task force is developing examples for APG version 1.1 that will be directly incorporated into the guide.</p>
         <ul>
           <li><a href="examples/menu-button/menu-button-1.html">Menu button with popup menu for actions</a></li>
           <li><a href="examples/menu-button/menu-button-2.html">Menu button with popup menu for links</a></li>
