--- a/examples/grid/dataGrids.html
+++ b/examples/grid/dataGrids.html
@@ -34,7 +34,7 @@
                 <div  aria-labelledby="ex1_label" role="region">
                     <div id="ex1">
                         <h4 id="grid1Label">Transactions January 1 through January 6</h4>
-                        <table role="grid" aria-labelledby="grid1Label" tabindex="0">
+                        <table role="grid" aria-labelledby="grid1Label">
                             <tr>
                                 <th>Date</th>
                                 <th>Type</th>
@@ -101,9 +101,9 @@
                 <div  aria-labelledby="ex2_label" role="region">
                     <div id="ex2">
                         <h4 id="grid2Label">Transactions January 1 through January 7</h4>
-                        <table role="grid" aria-labelledby="grid2Label" tabindex="0">
+                        <table role="grid" aria-labelledby="grid2Label">
                             <tr>
-                                <th aria-sort="ascending"><span tabindex="-1" role="button">Date</span></th>
+                                <th aria-sort="descending"><span tabindex="-1" role="button">Date</span></th>
                                 <th tabindex="-1">Type</th>
                                 <th aria-sort="none"><span tabindex="-1" role="button">Description</span></th>
                                 <th tabindex="-1">Category</th>
@@ -111,7 +111,7 @@
                                 <th tabindex="-1">Balance</th>
                             </tr>
                             <tr>
-                                <td tabindex="-1">01-Jan-16</td>
+                                <td tabindex="-1" data-sort-value="1">01-Jan-16</td>
                                 <td tabindex="-1">Deposit</td>
                                 <td>
                                     <a tabindex="-1" href="#">Cash Deposit</a>
@@ -119,11 +119,13 @@
                                 <td>
                                     <button tabindex="-1" aria-haspopup="true">Income</button>
                                 </td>
-                                <td tabindex="-1">$1,000,000.00</td>
+                                <td>
+                                    <input tabindex="-1" value="$1,000,000.00" />
+                                </td>
                                 <td tabindex="-1">$1,000,000.00</td>
                             </tr>
                             <tr>
-                                <td tabindex="-1">02-Jan-16</td>
+                                <td tabindex="-1" data-sort-value="2">02-Jan-16</td>
                                 <td tabindex="-1">Debit</td>
                                 <td>
                                     <a tabindex="-1" href="#">Down Town Grocery</a>
@@ -131,11 +133,13 @@
                                 <td>
                                     <button tabindex="-1" aria-haspopup="true">Groceries</button>
                                 </td>
-                                <td tabindex="-1">$250.00</td>
+                                <td>
+                                    <input tabindex="-1" value="$250.00" />
+                                </td>
                                 <td tabindex="-1">$999,750.00</td>
                             </tr>
                             <tr>
-                                <td tabindex="-1">03-Jan-16</td>
+                                <td tabindex="-1" data-sort-value="3">03-Jan-16</td>
                                 <td tabindex="-1">Debit</td>
                                 <td>
                                     <a tabindex="-1" href="#">Hot Coffee</a>
@@ -143,11 +147,13 @@
                                 <td>
                                     <button tabindex="-1" aria-haspopup="true">Dining Out</button>
                                 </td>
-                                <td tabindex="-1">$9.00</td>
+                                <td>
+                                    <input tabindex="-1" value="$9.00" />
+                                </td>
                                 <td tabindex="-1">$999,741.00</td>
                             </tr>
                             <tr>
-                                <td tabindex="-1">04-Jan-16</td>
+                                <td tabindex="-1" data-sort-value="4">04-Jan-16</td>
                                 <td tabindex="-1">Debit</td>
                                 <td>
                                     <a tabindex="-1" href="#">The Filling Station</a>
@@ -155,11 +161,13 @@
                                 <td>
                                     <button tabindex="-1" aria-haspopup="true">Auto</button>
                                 </td>
-                                <td tabindex="-1">$88.00</td>
+                                <td>
+                                    <input tabindex="-1" value="$88.00" />
+                                </td>
                                 <td tabindex="-1">$999,653.00</td>
                             </tr>
                             <tr>
-                                <td tabindex="-1">05-Jan-16</td>
+                                <td tabindex="-1" data-sort-value="5">05-Jan-16</td>
                                 <td tabindex="-1">Debit</td>
                                 <td>
                                     <a tabindex="-1" href="#">Tinker's Hardware</a>
@@ -167,11 +175,13 @@
                                 <td>
                                     <button tabindex="-1" aria-haspopup="true">Household</button>
                                 </td>
-                                <td tabindex="-1">$3,421.00</td>
+                                <td>
+                                    <input tabindex="-1" value="$3,421.00" />
+                                </td>
                                 <td tabindex="-1">$996,232.00</td>
                             </tr>
                             <tr>
-                                <td tabindex="-1">06-Jan-16</td>
+                                <td tabindex="-1" data-sort-value="6">06-Jan-16</td>
                                 <td tabindex="-1">Debit</td>
                                 <td>
                                     <a tabindex="-1" href="#">Cutey's Salon</a>
@@ -179,11 +189,13 @@
                                 <td>
                                     <button tabindex="-1" aria-haspopup="true">Beauty</button>
                                 </td>
-                                <td tabindex="-1">$700.00</td>
+                                <td>
+                                    <input tabindex="-1" value="$700.00" />
+                                </td>
                                 <td tabindex="-1">$995,532.00</td>
                             </tr>
                             <tr>
-                                <td tabindex="-1">07-Jan-16</td>
+                                <td tabindex="-1" data-sort-value="7">07-Jan-16</td>
                                 <td tabindex="-1">Debit</td>
                                 <td>
                                     <a tabindex="-1" href="#">My Chocolate Shop</a>
@@ -191,7 +203,9 @@
                                 <td>
                                     <button tabindex="-1" aria-haspopup="true">Dining Out</button>
                                 </td>
-                                <td tabindex="-1">$41.00</td>
+                                <td>
+                                    <input tabindex="-1" value="$41.00" />
+                                </td>
                                 <td tabindex="-1">$995,491.00</td>
                             </tr>
                         </table>
@@ -211,7 +225,7 @@
                 <div  aria-labelledby="ex3_label" role="region">
                     <div id="ex3">
                         <h4 id="grid3Label">Transactions for January 1 through January 15</h4>
-                        <table role="grid" aria-labelledby="grid3Label" aria-rowcount="16" aria-colcount="8" tabindex="0">
+                        <table role="grid" aria-labelledby="grid3Label" aria-rowcount="16" aria-colcount="8">
                             <tr>
                                 <th>Date</th>
                                 <th>Type</th>
