--- a/aria-practices.html
+++ b/aria-practices.html
@@ -335,7 +335,7 @@
           Any examples referenced here that are hosted outside www.w3.org may have changed and may not accurately exemplify the guidance in this section.
           The APG task force is developing examples for APG version 1.1 that will be directly incorporated into the guide.
         </p>
-        <p><a href="http://www.oaa-accessibility.org/examplep/alertdialog1/" title="Example 2 - Alert example using a modal ARIA dialog box" target="_blank">Open Ajax Alliance</a></p>
+        <p><a href="http://www.oaa-accessibility.org/examplep/alertdialog1/" target="_blank">Open Ajax Alliance</a></p>
       </section>
     </section>
 
@@ -556,9 +556,9 @@
               The APG task force is developing examples for APG version 1.1 that will be directly incorporated into the guide.
             </p>
             <ul>
-              <li><a href="http://developer.yahoo.com/yui/examples/container/container-ariaplugin_clean.html" title="Using the ARIA Container Plugin" rel="nofollow" target="_blank">YUI dialogs -- use first two dialog buttons</a></li>
-              <li><a href="http://www.oaa-accessibility.org/examplep/alertdialog1/" target="_blank" title="Example 2 - Alert example using a modal ARIA dialog box">Open Ajax Alliance (alertdialog)</a></li>
-              <li><a href="http://archive.dojotoolkit.org/nightly/dojotoolkit/dijit/tests/test_Dialog.html" title="Dialog Widget Dojo Tests" target="_blank">Dojo nightly</a></li>
+              <li><a href="http://developer.yahoo.com/yui/examples/container/container-ariaplugin_clean.html" rel="nofollow" target="_blank">YUI dialogs -- use first two dialog buttons</a></li>
+              <li><a href="http://www.oaa-accessibility.org/examplep/alertdialog1/" target="_blank">Open Ajax Alliance (alertdialog)</a></li>
+              <li><a href="http://archive.dojotoolkit.org/nightly/dojotoolkit/dijit/tests/test_Dialog.html" target="_blank">Dojo nightly</a></li>
             </ul>
           </section>
         </section>
@@ -1140,8 +1140,8 @@
         <p class="note">Any examples referenced here that are hosted outside www.w3.org may have changed and may not accurately exemplify the guidance in this section. The APG task force is developing examples for APG version 1.1 that will be directly incorporated into the guide.</p>
 
         <ul>
-          <li><a href="http://www.oaa-accessibility.org/examplep/menubar1/" title="Menubar" target="_blank">Open Ajax Alliance Menu bar</a></li>
-          <li><a href="http://www.oaa-accessibility.org/examplep/menubar2/" title="Menubar: ARIA CSS Selectors" target="_blank">Open Ajax Alliance Menu bar using CSS selectors</a></li>
+          <li><a href="http://www.oaa-accessibility.org/examplep/menubar1/" target="_blank">Open Ajax Alliance Menu bar</a></li>
+          <li><a href="http://www.oaa-accessibility.org/examplep/menubar2/" target="_blank">Open Ajax Alliance Menu bar using CSS selectors</a></li>
         </ul>
       </section>
     </section>
@@ -1307,8 +1307,8 @@
         <p class="note">Any examples referenced here that are hosted outside www.w3.org may have changed and may not accurately exemplify the guidance in this section. The APG task force is developing examples for APG version 1.1 that will be directly incorporated into the guide.</p>
 
         <ul>
-          <li><a href="http://www.oaa-accessibility.org/examplep/slider1/" title="Slider" target="_blank" rel="nofollow">Open Ajax Alliance Sliders</a> (see second example on page)</li>
-          <li><a href="http://files.paciellogroup.com/blogmisc/samples/aria/slider/doubleslider.html" title="" target="_blank" rel="nofollow">Paciello Group double slider</a></li>
+          <li><a href="http://www.oaa-accessibility.org/examplep/slider1/" target="_blank" rel="nofollow">Open Ajax Alliance Sliders</a> (see second example on page)</li>
+          <li><a href="http://files.paciellogroup.com/blogmisc/samples/aria/slider/doubleslider.html" target="_blank" rel="nofollow">Paciello Group double slider</a></li>
         </ul>
       </section>
     </section>
@@ -1348,8 +1348,8 @@
         <h4>Example</h4>
         <p class="note">Any examples referenced here that are hosted outside www.w3.org may have changed and may not accurately exemplify the guidance in this section. The APG task force is developing examples for APG version 1.1 that will be directly incorporated into the guide.</p>
         <ul>
-          <li><a href="http://www.oaa-accessibility.org/examplep/spinbutton1/" title="Spinbutton using IMG elements for buttons" rel="nofollow" target="_blank">Open Ajax Alliance Spinbutton</a></li>
-          <li><a href="http://archive.dojotoolkit.org/nightly/dojotoolkit/dijit/tests/form/test_Spinner.html" title="Dojo Spinner Widget Test" rel="nofollow">dojo/dijit nightly build</a></li>
+          <li><a href="http://www.oaa-accessibility.org/examplep/spinbutton1/" rel="nofollow" target="_blank">Open Ajax Alliance Spinbutton</a></li>
+          <li><a href="http://archive.dojotoolkit.org/nightly/dojotoolkit/dijit/tests/form/test_Spinner.html" rel="nofollow">dojo/dijit nightly build</a></li>
         </ul>
             </section>
         </section>
@@ -1494,7 +1494,7 @@
         <h4>Example</h4>
         <p class="note">Any examples referenced here that are hosted outside www.w3.org may have changed and may not accurately exemplify the guidance in this section. The APG task force is developing examples for APG version 1.1 that will be directly incorporated into the guide.</p>
         <ul>
-          <li><a href="http://www.oaa-accessibility.org/examplep/toolbar1/" title="Toolbar using inline images for visual state" target="_blank" rel="nofollow">Open Ajax Alliance toolbar</a></li>
+          <li><a href="http://www.oaa-accessibility.org/examplep/toolbar1/" target="_blank" rel="nofollow">Open Ajax Alliance toolbar</a></li>
         </ul>
       </section>
     </section>
@@ -1532,9 +1532,9 @@
         <h4>Example</h4>
         <p class="note">Any examples referenced here that are hosted outside www.w3.org may have changed and may not accurately exemplify the guidance in this section. The APG task force is developing examples for APG version 1.1 that will be directly incorporated into the guide.</p>
         <ul>
-          <li><a href="http://www.oaa-accessibility.org/examplep/tooltip1/" title="Tooltip" target="_blank" rel="nofollow">Open Ajax Alliance tooltip</a></li>
-          <li><a href="http://www.oaa-accessibility.org/examplep/tooltip2/" title="Tooltip: ARIA CSS selectors" target="_blank" rel="nofollow">Open Ajax Alliance tooltip using ARIA CSS selectors</a></li>
-          <li><a href="http://archive.dojotoolkit.org/nightly/dojotoolkit/dijit/tests/test_Tooltip.html" title="Dojo Tooltip Widget Test" target="_blank" rel="nofollow">Dojo nightly</a></li>
+          <li><a href="http://www.oaa-accessibility.org/examplep/tooltip1/" target="_blank" rel="nofollow">Open Ajax Alliance tooltip</a></li>
+          <li><a href="http://www.oaa-accessibility.org/examplep/tooltip2/" target="_blank" rel="nofollow">Open Ajax Alliance tooltip using ARIA CSS selectors</a></li>
+          <li><a href="http://archive.dojotoolkit.org/nightly/dojotoolkit/dijit/tests/test_Tooltip.html" target="_blank" rel="nofollow">Dojo nightly</a></li>
         </ul>
       </section>
     </section>
@@ -1614,10 +1614,10 @@
         <h4>Example</h4>
         <p class="note">Any examples referenced here that are hosted outside www.w3.org may have changed and may not accurately exemplify the guidance in this section. The APG task force is developing examples for APG version 1.1 that will be directly incorporated into the guide.</p>
         <ul>
-          <li><a href="http://www.oaa-accessibility.org/examplep/treeview1/" title="Treeview" target="_blank" rel="nofollow">Open Ajax Alliance treeview</a></li>
-          <li><a href="http://www.oaa-accessibility.org/examplep/treeview2/" title="Treeview: Using aria-owns" target="_blank" rel="nofollow">Open Ajax Alliance treeview using aria-owns</a></li>
-          <li><a href="http://www.oaa-accessibility.org/examplep/treeview3/" title="Treeview: ARIA CSS Selectors" target="_blank" rel="nofollow">Open Ajax Alliance treeview using ARIA CSS selectors</a></li>
-          <li><a href="http://archive.dojotoolkit.org/nightly/dojotoolkit/dijit/tests/tree/test_Tree.html" title="Dijit Tree Test" target="_blank" rel="nofollow">Dojo nightly</a></li>
+          <li><a href="http://www.oaa-accessibility.org/examplep/treeview1/" target="_blank" rel="nofollow">Open Ajax Alliance treeview</a></li>
+          <li><a href="http://www.oaa-accessibility.org/examplep/treeview2/" target="_blank" rel="nofollow">Open Ajax Alliance treeview using aria-owns</a></li>
+          <li><a href="http://www.oaa-accessibility.org/examplep/treeview3/" target="_blank" rel="nofollow">Open Ajax Alliance treeview using ARIA CSS selectors</a></li>
+          <li><a href="http://archive.dojotoolkit.org/nightly/dojotoolkit/dijit/tests/tree/test_Tree.html" target="_blank" rel="nofollow">Dojo nightly</a></li>
         </ul>
       </section>
     </section>
@@ -1657,7 +1657,7 @@
         <h4>Example</h4>
         <p class="note">Any examples referenced here that are hosted outside www.w3.org may have changed and may not accurately exemplify the guidance in this section. The APG task force is developing examples for APG version 1.1 that will be directly incorporated into the guide.</p>
         <ul>
-          <li><a href="http://archive.dojotoolkit.org/nightly/dojotoolkit/dijit/tests/layout/test_BorderContainer.html" title="dijit.layout.BorderContainer Test" target="_blank" rel="nofollow">Dojo Window splitter</a></li>
+          <li><a href="http://archive.dojotoolkit.org/nightly/dojotoolkit/dijit/tests/layout/test_BorderContainer.html" target="_blank" rel="nofollow">Dojo Window splitter</a></li>
         </ul>
       </section>
     </section>
@@ -2830,9 +2830,7 @@ And, in user interfaces with too many keyboard shortcuts, the excess shortcuts c
         <li>
             <em>Use key event handlers to enable activation of the element</em> - For every mouse event handler, a keyboard event handler is required. 
             For example, if you have an <em>onclick="doSomething()"</em> you may also need <em>onkeydown="return event.keyCode != 13 || doSomething();" </em>in order to allow the <kbd>Enter</kbd> key to activate that element. 
-          There are <a
-                        href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/Keyboard-navigable_JavaScript_widgets"
-                        title="Keyboard-navigable JavaScript widgets - MDN" target="_blank">user agent-specific considerations</a> for key event handling.
+          There are <a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/Keyboard-navigable_JavaScript_widgets" target="_blank">user agent-specific considerations</a> for key event handling.
         </li>
       </ul>
       </section>
@@ -2850,7 +2848,7 @@ And, in user interfaces with too many keyboard shortcuts, the excess shortcuts c
         </p>
           <p>
           The following code snippet from the <a
-                        href="http://oaa-accessibility.org/examplep/tooltip1/" title="iCITA"><abbr
+                        href="http://oaa-accessibility.org/examplep/tooltip1/"><abbr
                         title="Illinois Center for Information Technology Accessibility">iCITA</abbr></a> site shows the use of a <span
                         class="example highlight">onfocus=&quot;tooltipShow();&quot;</span> function to display the tooltip when focus is placed on an element. 
           </p>
