Update comments and add select behavior

--- a/examples/grid/dataGrids.html
+++ b/examples/grid/dataGrids.html
@@ -117,7 +117,26 @@
                                     <a tabindex="-1" href="#">Cash Deposit</a>
                                 </td>
                                 <td>
-                                    <button tabindex="-1" aria-haspopup="true">Income</button>
+                                    <select tabindex="-1">
+                                        <option selected="true">
+                                            Income
+                                        </option>
+                                        <option>
+                                            Groceries
+                                        </option>
+                                        <option>
+                                            Dining Out
+                                        </option>
+                                        <option>
+                                            Auto
+                                        </option>
+                                        <option>
+                                            Household
+                                        </option>
+                                        <option>
+                                            Beauty
+                                        </option>
+                                    </select>
                                 </td>
                                 <td>
                                     <input tabindex="-1" value="$1,000,000.00" />
@@ -131,7 +150,26 @@
                                     <a tabindex="-1" href="#">Down Town Grocery</a>
                                 </td>
                                 <td>
-                                    <button tabindex="-1" aria-haspopup="true">Groceries</button>
+                                    <select tabindex="-1">
+                                        <option>
+                                            Income
+                                        </option>
+                                        <option selected="true">
+                                            Groceries
+                                        </option>
+                                        <option>
+                                            Dining Out
+                                        </option>
+                                        <option>
+                                            Auto
+                                        </option>
+                                        <option>
+                                            Household
+                                        </option>
+                                        <option>
+                                            Beauty
+                                        </option>
+                                    </select>
                                 </td>
                                 <td>
                                     <input tabindex="-1" value="$250.00" />
@@ -145,7 +183,26 @@
                                     <a tabindex="-1" href="#">Hot Coffee</a>
                                 </td>
                                 <td>
-                                    <button tabindex="-1" aria-haspopup="true">Dining Out</button>
+                                    <select tabindex="-1">
+                                        <option>
+                                            Income
+                                        </option>
+                                        <option>
+                                            Groceries
+                                        </option>
+                                        <option selected="true">
+                                            Dining Out
+                                        </option>
+                                        <option>
+                                            Auto
+                                        </option>
+                                        <option>
+                                            Household
+                                        </option>
+                                        <option>
+                                            Beauty
+                                        </option>
+                                    </select>
                                 </td>
                                 <td>
                                     <input tabindex="-1" value="$9.00" />
@@ -159,7 +216,26 @@
                                     <a tabindex="-1" href="#">The Filling Station</a>
                                 </td>
                                 <td>
-                                    <button tabindex="-1" aria-haspopup="true">Auto</button>
+                                    <select tabindex="-1">
+                                        <option>
+                                            Income
+                                        </option>
+                                        <option>
+                                            Groceries
+                                        </option>
+                                        <option>
+                                            Dining Out
+                                        </option>
+                                        <option selected="true">
+                                            Auto
+                                        </option>
+                                        <option>
+                                            Household
+                                        </option>
+                                        <option>
+                                            Beauty
+                                        </option>
+                                    </select>
                                 </td>
                                 <td>
                                     <input tabindex="-1" value="$88.00" />
@@ -173,7 +249,26 @@
                                     <a tabindex="-1" href="#">Tinker's Hardware</a>
                                 </td>
                                 <td>
-                                    <button tabindex="-1" aria-haspopup="true">Household</button>
+                                    <select tabindex="-1">
+                                        <option>
+                                            Income
+                                        </option>
+                                        <option>
+                                            Groceries
+                                        </option>
+                                        <option>
+                                            Dining Out
+                                        </option>
+                                        <option>
+                                            Auto
+                                        </option>
+                                        <option selected="true">
+                                            Household
+                                        </option>
+                                        <option>
+                                            Beauty
+                                        </option>
+                                    </select>
                                 </td>
                                 <td>
                                     <input tabindex="-1" value="$3,421.00" />
@@ -187,7 +282,26 @@
                                     <a tabindex="-1" href="#">Cutey's Salon</a>
                                 </td>
                                 <td>
-                                    <button tabindex="-1" aria-haspopup="true">Beauty</button>
+                                    <select tabindex="-1">
+                                        <option>
+                                            Income
+                                        </option>
+                                        <option>
+                                            Groceries
+                                        </option>
+                                        <option>
+                                            Dining Out
+                                        </option>
+                                        <option>
+                                            Auto
+                                        </option>
+                                        <option>
+                                            Household
+                                        </option>
+                                        <option selected="true">
+                                            Beauty
+                                        </option>
+                                    </select>
                                 </td>
                                 <td>
                                     <input tabindex="-1" value="$700.00" />
@@ -201,7 +315,26 @@
                                     <a tabindex="-1" href="#">My Chocolate Shop</a>
                                 </td>
                                 <td>
-                                    <button tabindex="-1" aria-haspopup="true">Dining Out</button>
+                                    <select tabindex="-1">
+                                        <option>
+                                            Income
+                                        </option>
+                                        <option>
+                                            Groceries
+                                        </option>
+                                        <option selected="true">
+                                            Dining Out
+                                        </option>
+                                        <option>
+                                            Auto
+                                        </option>
+                                        <option>
+                                            Household
+                                        </option>
+                                        <option>
+                                            Beauty
+                                        </option>
+                                    </select>
                                 </td>
                                 <td>
                                     <input tabindex="-1" value="$41.00" />
