--- a/examples/grid/dataGrids.html
+++ b/examples/grid/dataGrids.html
@@ -103,7 +103,7 @@
                         <h4 id="grid2Label">Transactions January 1 through January 7</h4>
                         <table role="grid" aria-labelledby="grid2Label">
                             <tr>
-                                <th aria-sort="ascending"><span tabindex="-1" role="button">Date</span></th>
+                                <th aria-sort="descending"><span tabindex="-1" role="button">Date</span></th>
                                 <th tabindex="-1">Type</th>
                                 <th aria-sort="none"><span tabindex="-1" role="button">Description</span></th>
                                 <th tabindex="-1">Category</th>
